Removed irrelevant features

--- a/data-analytics-Conor.ipynb
+++ b/data-analytics-Conor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "(98402, 38)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have 49570 NaN/Null values in this dataset\n"
+      "We have 49472 NaN/Null values in this dataset\n"
      ]
     }
    ],
@@ -147,7 +147,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49472\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(98402-48930)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 98 missing values in the two columns: 'team_a_score' and 'team_h_score'.\n",
+    "We will  now set them to 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 98402 entries, 0 to 98401\n",
+      "Data columns (total 38 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   Unnamed: 0         98402 non-null  int64  \n",
+      " 1   season_x           98402 non-null  object \n",
+      " 2   name               98402 non-null  object \n",
+      " 3   position           98402 non-null  object \n",
+      " 4   team_x             48930 non-null  object \n",
+      " 5   assists            98402 non-null  int64  \n",
+      " 6   bonus              98402 non-null  int64  \n",
+      " 7   bps                98402 non-null  int64  \n",
+      " 8   clean_sheets       98402 non-null  int64  \n",
+      " 9   creativity         98402 non-null  float64\n",
+      " 10  element            98402 non-null  int64  \n",
+      " 11  fixture            98402 non-null  int64  \n",
+      " 12  goals_conceded     98402 non-null  int64  \n",
+      " 13  goals_scored       98402 non-null  int64  \n",
+      " 14  ict_index          98402 non-null  float64\n",
+      " 15  influence          98402 non-null  float64\n",
+      " 16  kickoff_time       98402 non-null  object \n",
+      " 17  minutes            98402 non-null  int64  \n",
+      " 18  opponent_team      98402 non-null  int64  \n",
+      " 19  opp_team_name      98402 non-null  object \n",
+      " 20  own_goals          98402 non-null  int64  \n",
+      " 21  penalties_missed   98402 non-null  int64  \n",
+      " 22  penalties_saved    98402 non-null  int64  \n",
+      " 23  red_cards          98402 non-null  int64  \n",
+      " 24  round              98402 non-null  int64  \n",
+      " 25  saves              98402 non-null  int64  \n",
+      " 26  selected           98402 non-null  int64  \n",
+      " 27  team_a_score       98402 non-null  float64\n",
+      " 28  team_h_score       98402 non-null  float64\n",
+      " 29  threat             98402 non-null  float64\n",
+      " 30  total_points       98402 non-null  int64  \n",
+      " 31  transfers_balance  98402 non-null  int64  \n",
+      " 32  transfers_in       98402 non-null  int64  \n",
+      " 33  transfers_out      98402 non-null  int64  \n",
+      " 34  value              98402 non-null  int64  \n",
+      " 35  was_home           98402 non-null  bool   \n",
+      " 36  yellow_cards       98402 non-null  int64  \n",
+      " 37  GW                 98402 non-null  int64  \n",
+      "dtypes: bool(1), float64(6), int64(25), object(6)\n",
+      "memory usage: 27.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dfClean['team_a_score'] = dfClean['team_a_score'].fillna(0)\n",
+    "dfClean['team_h_score'] = dfClean['team_h_score'].fillna(0)\n",
+    "dfClean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +609,7 @@
        "5     False             1   1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,6 +617,78 @@
    "source": [
     "pd.set_option(\"display.max_columns\", None)\n",
     "dfClean.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 98402 entries, 0 to 98401\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   season_x       98402 non-null  object \n",
+      " 1   transfers_out  98402 non-null  int64  \n",
+      " 2   total_points   98402 non-null  int64  \n",
+      " 3   minutes        98402 non-null  int64  \n",
+      " 4   transfers_in   98402 non-null  int64  \n",
+      " 5   name           98402 non-null  object \n",
+      " 6   selected       98402 non-null  int64  \n",
+      " 7   Unnamed: 0     98402 non-null  int64  \n",
+      " 8   value          98402 non-null  int64  \n",
+      " 9   position       98402 non-null  object \n",
+      " 10  ict_index      98402 non-null  float64\n",
+      " 11  creativity     98402 non-null  float64\n",
+      " 12  GW             98402 non-null  int64  \n",
+      " 13  goals_scored   98402 non-null  int64  \n",
+      " 14  threat         98402 non-null  float64\n",
+      " 15  influence      98402 non-null  float64\n",
+      "dtypes: float64(4), int64(9), object(3)\n",
+      "memory usage: 12.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Taking away all the irrelevant features\n",
+    "featuresToKeep = list(\n",
+    "    set(dfClean.columns)\n",
+    "    - {\n",
+    "        \"team_x\",\n",
+    "        \"opponent_team\",\n",
+    "        \"opp_team_name\",\n",
+    "        \"was_home\",\n",
+    "        \"team_a_score\",\n",
+    "        \"round\",\n",
+    "        \"fixture\",\n",
+    "        \"element\",\n",
+    "        \"saves\",\n",
+    "        \"team_h_score\",\n",
+    "        \"own_goals\",\n",
+    "        \"saves\",\n",
+    "        \"opponent_team\",\n",
+    "        \"penalties_missed\",\n",
+    "        \"penalties_saved\",\n",
+    "        \"red_cards\",\n",
+    "        \"kickoff_time\",\n",
+    "        \"bps\",\n",
+    "        \"assists\",\n",
+    "        \"bonus\",\n",
+    "        \"clean_sheets\",\n",
+    "        \"goals_conceded\",\n",
+    "        \"yellow_cards\",\n",
+    "        \"transfers_balance\"\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "dfRemoved =dfClean[featuresToKeep]\n",
+    "\n",
+    "dfRemoved.info()"
    ]
   }
  ],
